# ComfyUI-BRIA-API

./: Readme.md  __init__.py  bria_api_node.py  pyproject.toml  workflow.json
nodes/: __init__.py  attribution_by_image_node.py  base_node.py  common.py  eraser_node.py  fibo_edit_node.py  fibo_edit_structured_instruction_node.py  fibo_generate_node.py  fibo_refine_node.py  generate_image_lite_node_v2.py  generate_image_node_v2.py  generate_structured_prompt_lite_node_v2.py  generate_structured_prompt_node_v2.py  generative_fill_node.py  image_enhance_node.py  image_expansion_node.py  multi_image_select.py  product_integrate_node.py  refine_image_lite_node_v2.py  refine_image_node_v2.py  reimagine_node.py  remove_foreground_node.py  replace_bg_node.py  rmbg_node.py  shot_by_image_automatic_aspect_ratio_node.py  shot_by_image_automatic_node.py  shot_by_image_custom_coordinates_node.py  shot_by_image_manual_padding_node.py  shot_by_image_manual_placement_node.py  shot_by_image_node.py  shot_by_text_automatic_aspect_ratio_node.py  shot_by_text_automatic_node.py  shot_by_text_custom_coordinates_node.py  shot_by_text_manual_padding_node.py  shot_by_text_manual_placement_node.py  shot_by_text_node.py  tailored_gen_node.py  tailored_model_info_node.py  tailored_portrait_node.py  text_2_image_base_node.py  (+4 more)
web/: select_images_from_folder.js
workflows/: Bria Video RMBG workflow.json  FIBO_Workflow.json  Fibo_edit_workflow.json  LIGHT_Workflow.json  Product shot generation_workflow.json  ProductShot_workflow.json  Product_shot_placements.json  Video_Editig_Workflow.json  (+14 more)
(+12 files in other folders)
