[project]
name = "comfyui-bria-api"
description = "Custom nodes for ComfyUI using BRIA's API."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Bria-AI/ComfyUI-BRIA-API"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "briaai"
DisplayName = "ComfyUI-BRIA-API"
Icon = ""
